规范国际化文件及国际化定义。